--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,15 @@
    "source": [
     "# x_train.iloc[:, 14:].head() # Take the filtered features instead\n",
     "x_train_f = x_train[list(filter1[\"title\"])] # doesn't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Correlation filter"
    ]
   },
   {
